; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/cp/extr_init.c_expand_cleanup_for_base.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/cp/extr_init.c_expand_cleanup_for_base.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@current_class_ref = common dso_local global i32 0, align 4
@base_dtor_identifier = common dso_local global i32 0, align 4
@NULL_TREE = common dso_local global i32 0, align 4
@LOOKUP_NORMAL = common dso_local global i32 0, align 4
@LOOKUP_NONVIRTUAL = common dso_local global i32 0, align 4
@COND_EXPR = common dso_local global i32 0, align 4
@void_type_node = common dso_local global i32 0, align 4
@integer_zero_node = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64, i64)* @expand_cleanup_for_base to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @expand_cleanup_for_base(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i64, i64* %3, align 8
  %7 = call i32 @BINFO_TYPE(i64 %6)
  %8 = call i64 @TYPE_HAS_TRIVIAL_DESTRUCTOR(i32 %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  br label %33

11:                                               ; preds = %2
  %12 = load i32, i32* @current_class_ref, align 4
  %13 = load i32, i32* @base_dtor_identifier, align 4
  %14 = load i32, i32* @NULL_TREE, align 4
  %15 = load i64, i64* %3, align 8
  %16 = load i32, i32* @LOOKUP_NORMAL, align 4
  %17 = load i32, i32* @LOOKUP_NONVIRTUAL, align 4
  %18 = or i32 %16, %17
  %19 = call i64 @build_special_member_call(i32 %12, i32 %13, i32 %14, i64 %15, i32 %18)
  store i64 %19, i64* %5, align 8
  %20 = load i64, i64* %4, align 8
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %30

22:                                               ; preds = %11
  %23 = load i32, i32* @COND_EXPR, align 4
  %24 = load i32, i32* @void_type_node, align 4
  %25 = load i64, i64* %4, align 8
  %26 = call i32 @c_common_truthvalue_conversion(i64 %25)
  %27 = load i64, i64* %5, align 8
  %28 = load i32, i32* @integer_zero_node, align 4
  %29 = call i64 @fold_build3(i32 %23, i32 %24, i32 %26, i64 %27, i32 %28)
  store i64 %29, i64* %5, align 8
  br label %30

30:                                               ; preds = %22, %11
  %31 = load i64, i64* %5, align 8
  %32 = call i32 @finish_eh_cleanup(i64 %31)
  br label %33

33:                                               ; preds = %30, %10
  ret void
}

declare dso_local i64 @TYPE_HAS_TRIVIAL_DESTRUCTOR(i32) #1

declare dso_local i32 @BINFO_TYPE(i64) #1

declare dso_local i64 @build_special_member_call(i32, i32, i32, i64, i32) #1

declare dso_local i64 @fold_build3(i32, i32, i32, i64, i32) #1

declare dso_local i32 @c_common_truthvalue_conversion(i64) #1

declare dso_local i32 @finish_eh_cleanup(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
